Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * server:nspass removed. server:idstr added.
    * Changed the way we parse strings to support multi-word
      strings in config values.
    * Added server:nspass to config options. Will be replaced in
      the future by idstr.
    * Parse NICK.
    * Added usrc() to API::IRC for formatting a source.
    * Added awarn() to API::Std for warnings.
    * Parse Numeric:432.
    * Parse Numeric:433.
    * Added nick() to API::IRC.
    * Added %got_001 to Parser::IRC for checking if we've been
      sent 001.
    * Renamed API::IRC::mode() to cmode()
    * Added mod_init() and mod_void() to API::Std.
    * Use Class::Unload.
    * Handle SIGTERM, SIGINT and SIGHUP.
    * Added quit() to API::IRC.
    * Added notice() to API::IRC.
    * Added privmsg() to API::IRC.
    * Added mode() to API::IRC.
    * Added PASS support.
    * Bug fix: err() fatal errors now work. They didn't work
      due to bad regex.
    * Added an installation script.
    * Fork into the background if not in debug mode.
    * Begin on API::IRC.
    * Parse PING and Numeric:001.
    * Begin on the IRC parser.
    * Added sockets, support for multiple asynchronous sockets.
    * Bug fix: conf_get() now returns correct data by checking
      what type of reference the requested value is.
    * Foundation completed.
    * Added API function err()
    * Added API function dbug()
    * Added a debug mode.
    * Old logs can now expire if set to do so in config.
    * Added API function alog()
    * Added API::Log::expire_logs()
    * Added API function println()
    * Use Mouse.
    * Added contributor; Chazz "Alexandria" Wolcott.
    * Gettext is no longer used.
    * German translations. Contributed by Chazz "Alexandria" Wolcott.
    * Converted English and French files to new format.
    * Created a new method of translation.